# tritonsim

./: .gitignore  .gitmodules
docs/: build_setup.md
src/: Directory.Packages.props  Triton Simulator.sln  build.bat  build.config  build.py  build_complete.bat  build_web.bat  build_web_wasm.bat  build_win.bat  run_web.py
src/Common/: common.props  enum_compile.bat  enum_compile.py  enum_compile.sh  enums.json  shader_def.h  shader_packer.cpp  shader_packer.h  shader_types.h
src/ShaderBin/: _shader_config.json  bouncing_circle_fs.sc  gameoflife_2d_fs.sc  gameoflife_2d_vs.sc  procedural_neon_pulse_fs.sc  procedural_neon_pulse_varying.def.sc  shader_config.json  shader_packer.exp  shader_packer.lib  tritonsim_asm.h  unlit_primitive_varying.def.sc
src/TritonSim.GUI/: App.axaml  App.axaml.cs  TritonSim.GUI.csproj
src/TritonSim.GUI.Android/: MainActivity.cs  TritonSim.GUI.Android.csproj
src/TritonSim.GUI.Android/Properties/: AndroidManifest.xml
src/TritonSim.GUI.Browser/: App.cs  BrowserApp.cs  Program.cs  TritonSim.GUI.Browser.csproj
src/TritonSim.GUI.Browser/Infrastructure/: AssemblyInfo.cs  BrowserDomElementHandle.cs  BrowserInterop.cs  DomHelper.cs
src/TritonSim.GUI.Browser/Properties/: launchSettings.json
src/TritonSim.GUI.Browser/Providers/: BrowserCanvasProvider.cs  BrowserNativeSimulator.cs  BrowserWindowProvider.cs
src/TritonSim.GUI.Browser/wwwroot/: app.css  index.html  main.js  tritonsim.js  web.config
src/TritonSim.GUI.Desktop/: App.axaml.cs  App.cs  DesktopApp.cs  Program.cs  TritonSim.GUI.Desktop.csproj  app.manifest
src/TritonSim.GUI.Desktop/Infrastructure/: User32Native.cs
src/TritonSim.GUI.Desktop/Properties/: launchSettings.json
src/TritonSim.GUI.Desktop/Providers/: DesktopNativeProvider.cs  DesktopNativeSimulator.cs  WindowsCanvasProvider.cs  WindowsWindowProvider.cs
src/TritonSim.GUI.Test/: NativeProviderTests.cs  TritonSim.GUI.Test.csproj  TritonSimRenderControlTests.cs
src/TritonSim.GUI.iOS/: AppDelegate.cs  Info.plist  Main.cs  TritonSim.GUI.iOS.csproj
src/TritonSim.GUI.iOS/Resources/: LaunchScreen.xib
src/TritonSim.GUI/Controls/: InternalNativeHost.cs  SimulationNativeControlHost.cs  TritonSimRenderControl.axaml  TritonSimRenderControl.axaml.cs  TritonSimRenderControl.cs
src/TritonSim.GUI/Infrastructure/: ExtensionMethods.cs  RendererInitState.cs  RendererType.cs  ResponseCode.cs  ResponseCodeExtensions.cs  SimConfig.cs  SimContext.cs  SimulationFlags.cs  SimulationMode.cs  SimulationState.cs
src/TritonSim.GUI/Providers/: ConsoleLogger.cs  ILogger.cs  INativeCanvasProvider.cs  INativeSimulator.cs  INativeWindowProvider.cs  IPlatformCanvasHandle.cs  ITritonSimNativeProvider.cs  NativeProvider.cs  PreviewLogger.cs
src/TritonSim.GUI/Resources/: Colors.axaml  Strings.Designer.cs  Strings.resx  Styles.Button.axaml  Styles.ComboBox.axaml
src/TritonSim.GUI/ViewModels/: MainViewModel.cs  ViewModelBase.cs  VmRendererType.cs  VmSimulation.cs  VmSimulationWindow.cs  VmStatusMessage.cs
src/TritonSim.GUI/Views/: SimulationView.axaml  SimulationView.axaml.cs  SimulationWindow.axaml  SimulationWindow.axaml.cs
src/TritonSimGUI/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  TritonSimGUI.csproj
src/TritonSimGUI/Controls/: BgfxSwapChainView.cs  BgfxSwapChainViewHandler.cs
src/TritonSimGUI/EntityModels/: EmBase.cs  EmRendererType.cs  EmStatusMessage.cs  StatusMessageType.cs
src/TritonSimGUI/Infrastructure/: AsyncRelayCommand.cs  ExtensionMethods.cs  RelayCommand.cs  RendererType.cs  ResponseCode.cs  SimConfig.cs  SimContext.cs  TritonSimNative.cs
src/TritonSimGUI/Infrastructure/Converters/: InvertedBoolConverter.cs
src/TritonSimGUI/Properties/: launchSettings.json
src/TritonSimGUI/Resources/: Converters.xaml
src/TritonSimGUI/Resources/Styles/: Colors.xaml  Styles.xaml
src/TritonSimGUI/ViewModels/: VmBase.cs  VmMain.cs
src/TritonSimGUI/Views/: NativeRendererView.cs  NativeRendererViewHandler.cs  TritonSimView.cs  TritonSimView.xaml  TritonSimView.xaml.cs
src/TritonSimRenderer/: CMakeLists.txt  RendererBase.cpp  RendererBase.h  RendererBouncingCircle.cpp  RendererBouncingCircle.h  RendererFactory.cpp  RendererFactory.h  RendererGameOfLife.cpp  RendererGameOfLife.h  RendererGameOfLife2D.cpp  RendererGameOfLife2D.h  RendererNeonPulse.cpp  RendererNeonPulse.h  RendererTest.cpp  RendererTest.h  RendererTestColorChanging.cpp  RendererTestColorChanging.h  RendererTestEdges.cpp  RendererTestEdges.h  RendererType.h  ResponseCode.h  TritonSimRenderer.rc  TritonSimRenderer.vcxproj  TritonSimRenderer.vcxproj.filters  defs.h  defs_emscripten.h  defs_win.h  dllmain.cpp  pch.h  renderer_api.cpp  renderer_api.h  resource.h  shaderc_cmd.bat  vertex.sc
src/TritonSimShaderPacker/: TritonSimShaderPacker.vcxproj  TritonSimShaderPacker.vcxproj.filters  main.cpp  pch.h  shader_compiler.cpp  shader_compiler.h  shader_packer.cpp  utils.cpp  utils.h
